dotnet-chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-chatbot-deployment
  labels:
    app: dotnet-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-chatbot
  template:
    metadata:
      labels:
        app: dotnet-chatbot
    spec:
      containers:
        - name: dotnet-chatbot
          image: mjrdockerregistry.azurecr.io/dotnet-chatbot-1:v1
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-chatbot-service
spec:
  selector:
    app: dotnet-chatbot
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
