react-chatbot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-chatbot-ingress
spec:
  rules:
    - host: react-chatbot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-chatbot-service
                port:
                  number: 3000
